--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,10 @@
 	</style>
 </head>
 <body>
-	
+	<canvas id="mainCanvas" width="100" height="100"></canvas>
+	<script type="text/javascript" src="js/BoardRenderer.js"></script>
+	<script type="text/javascript" src="js/BoardModel.js"></script>
+	<script type="text/javascript" src="js/Game.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
